src-ken&y/objects/MRP_Run__c.object
<CustomObject>
    <customHelpPage>HelpMRPRun</customHelpPage>
    <description>MRP Runtime Run ID and run time parameters</description>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <inlineHelpText>Lookup to Company</inlineHelpText>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>MRP Runs</relationshipLabel>
        <relationshipName>MRP_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <description>Indicates whether the MRP completed with Success or Failure</description>
        <inlineHelpText>Indicates whether the MRP completed with Success or Failure</inlineHelpText>
        <label>Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>MRP Runs</relationshipLabel>
        <relationshipName>MRP_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failure_Message__c</fullName>
        <description>If the MRP failed to complete this is the message received from the system.</description>
        <inlineHelpText>If the MRP failed to complete this is the message received from the system.</inlineHelpText>
        <label>Failure Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_Zero_QOH_as_Supply__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Only Level Zero Item&apos;s Quantity On Hand as Supply in MRP</description>
        <inlineHelpText>Use Only Level Zero Item&apos;s Quantity On Hand as Supply in MRP</inlineHelpText>
        <label>Level Zero QOH as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRP_Backward_Horizon_in_Days__c</fullName>
        <description>The number of days in the past from today that MRP will search for demand and supply</description>
        <inlineHelpText>The number of days in the past from today that MRP will search for demand and supply</inlineHelpText>
        <label>MRP Backward Horizon in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Demand_Time_Fence_in_Days__c</fullName>
        <description>MRP uses forecasted demand outside of this time window and Sales Orders inside this time fence</description>
        <inlineHelpText>MRP uses forecasted demand outside of this time window and Sales Orders inside this time fence</inlineHelpText>
        <label>MRP Demand Time Fence in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Forward_Horizon_in_Days__c</fullName>
        <description>The number of days in the future from today that MRP will search for demand and supply</description>
        <inlineHelpText>The number of days in the future from today that MRP will search for demand and supply</inlineHelpText>
        <label>MRP Forward Horizon in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Planning_Time_Fence_in_Days__c</fullName>
        <description>The number of days in the future from today before MRP creates any planned make order</description>
        <inlineHelpText>The number of days in the future from today before MRP creates any planned make order</inlineHelpText>
        <label>MRP Planning Time Fence in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Forecast_as_Demand__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Order Forecast as Demand in MRP</description>
        <inlineHelpText>Use Order Forecast as Demand in MRP</inlineHelpText>
        <label>Order Forecast as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planning_Calendar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>MRP Runs</relationshipLabel>
        <relationshipName>MRP_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Business Hours</description>
        <inlineHelpText>Lookup to Business Hours</inlineHelpText>
        <label>Planning Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>MRP_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Orders_as_Supply__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Purchase Orders as Supply in MRP</description>
        <inlineHelpText>Use Purchase Orders as Supply in MRP</inlineHelpText>
        <label>Purchase Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_on_Hand_as_Supply__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Quantity on Hand as Supply in MRP</description>
        <inlineHelpText>Use Quantity on Hand as Supply in MRP</inlineHelpText>
        <label>Quantity on Hand as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiving_Calendar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>MRP Runs (Receiving Calendar)</relationshipLabel>
        <relationshipName>MRP_Runs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Business Hours</description>
        <inlineHelpText>Lookup to Business Hours</inlineHelpText>
        <label>Receiving Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>MRP_Runs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Orders_as_Demand__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Sales Orders as Demand in MRP</description>
        <inlineHelpText>Use Sales Orders as Demand in MRP</inlineHelpText>
        <label>Sales Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Orders_as_Demand__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Transfer Orders as Demand in MRP</description>
        <inlineHelpText>Use Transfer Orders as Demand in MRP</inlineHelpText>
        <label>Transfer Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Orders_as_Supply__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Transfer Orders as Supply in MRP</description>
        <inlineHelpText>Use Transfer Orders as Supply in MRP</inlineHelpText>
        <label>Transfer Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Orders_as_Demand__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Work Orders as Demand in MRP</description>
        <inlineHelpText>Use Work Orders as Demand in MRP</inlineHelpText>
        <label>Work Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Orders_as_Supply__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Work Orders as Supply in MRP</description>
        <inlineHelpText>Use Work Orders as Supply in MRP</inlineHelpText>
        <label>Work Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <label>MRP Run</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Planning_Calendar__c</columns>
        <columns>Receiving_Calendar__c</columns>
        <columns>MRP_Backward_Horizon_in_Days__c</columns>
        <columns>MRP_Forward_Horizon_in_Days__c</columns>
        <columns>MRP_Demand_Time_Fence_in_Days__c</columns>
        <columns>MRP_Planning_Time_Fence_in_Days__c</columns>
        <columns>Quantity_on_Hand_as_Supply__c</columns>
        <columns>Level_Zero_QOH_as_Supply__c</columns>
        <columns>Purchase_Orders_as_Supply__c</columns>
        <columns>Work_Orders_as_Supply__c</columns>
        <columns>Order_Forecast_as_Demand__c</columns>
        <columns>Sales_Orders_as_Demand__c</columns>
        <columns>Work_Orders_as_Demand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRP_Run - {0000000000}</displayFormat>
        <label>MRP_Run</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRP Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QOH_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Level_Zero_QOH_as_Supply__c== true,  Quantity_on_Hand_as_Supply__c== true)</errorConditionFormula>
        <errorDisplayField>Level_Zero_QOH_as_Supply__c</errorDisplayField>
        <errorMessage>You cannot check both Use Quantity on Hand as Supply in MRP or Use Only Level Zero QOH as Supply in MRP</errorMessage>
    </validationRules>
</CustomObject>